# runprompt

./: README.md  TODO.md  pyproject.toml  runprompt  runprompt.py
.github/workflows/: test.yml
tests/: args-var-test.prompt  hello.prompt  input-var-test.prompt  job.prompt  readfile.prompt  required-schema.prompt  runtests  shebang.prompt  shebang.prompt.test-response  stdin-test.prompt  stdin-var-test.prompt  test-base-url.py  test-before.py  test-cache.py  test-chat.py  test-config.py  test-input-vars.py  test-mustache.py  test-network-config.py  test-read.py  test-required-inputs.py  test-shell-tools.py  test-tools.py
