[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runprompt"
version = "0.1.0"
description = "Run LLM .prompt files from your shell"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
# Full YAML support and better web scraping
full = ["pyyaml", "playwright"]

[project.scripts]
runprompt = "runprompt:main"
